welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:7: error: '}' expected but 'case' found.
	case "B" =>
        ^BDR2:10: error: '}' expected but 'case' found.
	case "C" =>
        ^BDR2:14: error: illegal start of definition
	case "D" =>
        ^BDR2:19: error: illegal start of definition
	case "E" =>
        ^BDR2:25: error: illegal start of definition
	case "F" =>
        ^BDR2:32: error: illegal start of definition
	case "Z" =>
        ^BDR2:34: error: illegal start of definition
	case "Y" => 
        ^BDR2:37: error: illegal start of definition
	case "X" =>
        ^BDR2:41: error: illegal start of definition
	case "W" =>
        ^BDR2:46: error: illegal start of definition
	case "V" =>
        ^BDR2:52: error: illegal start of definition
	case "U" =>
        ^BDR2:59: error: illegal start of definition
	case "R" =>
        ^BDR2:62: error: illegal start of definition
	case "L" =>
        ^BDR2:65: error: illegal start of definition
	case "I" =>
        ^BDR2:70: error: eof expected but '}' found.
}
^